# learn-python

./: .gitignore  README.md  comments.md  pyproject.toml
001-bmi-calculator/: main.py
002-live-weeks/: main.py
003-tip-calculator/: main.py
004-odd-or-even/: README.md  main.py
005-bmi-calculator-2.0/: main.py
006-leap-year/: main.py
007-pizza-order-program/: main.py
008-love-calculator/: README.md
009-toss-a-coin/: main.py
010-who-is-paying-the-bill/: main.py
011-tressure-map/: main.py
012-rock-paper-scissors/: main.py
013-average-height/: main.py
014-highest-score-in-class/: main.py
015-add-even-numbers/: main.py
017-password-generator/: main.py
018-reborg-world/: hurdle1.py  hurdle2.py  hurdle3.py  hurdle4_ver1.py  hurdle4_ver2.py  maze.py
019-hangman-game/: step-1.py  step-2.py  step-3.py  step-4.py
020-paint-area-function/: main.py
021-prime-number-checker/: main.py
022-caesar-cipher/: step-1.py  step-2.py  step-3.py
023-student-grade-dictionary/: main.py
024-dictionary-in-list/: solution.py
025-blind-auction/: main.py
026-days-in-month/: main.py
027-calculator/: main.py
028-blackjack-game/: README.md  clear.py  main.py
029-guess-a-number-game/: art.py  main.py
030-debugging/: main.py
031-higher-lower-game/: main.py
032-coffee-machine/: main.py
033-class-turtle/: dotted-line.py  draw_shapes.py  draw_spirograph.py  main.py  random_walk.py  turtle_draw_geometry.py
034-pretty-table/: main.py
035-quiz-using-class/: main.py  quiz_brain.py
036-hirst-painting/: main.py
037-etch-a-sketch/: main.py
(+145 files in other folders)
