[tool.poetry]
name = "learn-python"
version = "0.1.0"
description = ""
authors = ["anbuchelva user <anbuchelva@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.0"
prettytable = "^2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
